platform-infra/gitops-k8s/devops-components/components/argocd/prod/httproutes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: https-default
      namespace: platform-gateways
      kind: Gateway
      sectionName: https-argocd-airpay-codes
  hostnames:
    - "argocd.airpay.codes"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
        - headers:
            - name: "content-type"
              value: "application/grpc"
      backendRefs:
        - name: argocd-server
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
